app: Allow user to specify number of results per query

--- a/app/static/ui/index.html
+++ b/app/static/ui/index.html
@@ -22,6 +22,15 @@
             <!-- Search form will be in the first grid column -->
             <form id="searchForm" class="search-form">
                 <input type="text" id="query" placeholder="Enter your search query..." autofocus>
+                <div class="select-wrapper">
+                    <select id="topK" title="Number of results">
+                        <option value="" disabled selected>No. of results</option>
+                        <option value="5">5</option>
+                        <option value="10">10</option>
+                        <option value="20">20</option>
+                        <option value="50">50</option>
+                    </select>
+                </div>
                 <button type="submit"><i class="fas fa-search"></i></button>
             </form>
 
