static: Adjust model name and refactor time format

--- a/app/static/ui/index.html
+++ b/app/static/ui/index.html
@@ -14,6 +14,8 @@
                 <h1>AI S3 Search</h1>
                 <div class="project-info">
                     <p>Unlock insights from your S3 data with neural-powered search. Fast, precise, and scalable discovery for your documents.</p>
+                    <br>
+                    <p id="modelNameDisplay">Model: Loading...</p>
                 </div>
                 <div id="status" class="status-bar">Checking status...</div>
             </header>
