app: Implement filtering by document

--- a/app/static/ui/index.html
+++ b/app/static/ui/index.html
@@ -43,6 +43,9 @@
                         <option value="10">10</option>
                         <option value="20">20</option>
                     </select>
+                    <select id="sourceSelect" title="source_id">
+                        <option value="">All sources</option>
+                    </select>
                 </div>
                 <button type="submit"><i class="fas fa-search"></i></button>
             </form>
